# maps-workflow

./: Dockerfile  README.md  action.yaml  entrypoint.sh  install.sh  pyproject.toml  ruff.toml
.github/workflows/: docker.yml
map_rules/: 000_check_file_size.yaml  001_check_start_finish_line.yaml  001_has_tiles.yaml  002_check_settings.yaml  003_check_images.yaml  004_check_sounds.yaml  005_has_valid_info.yaml
maps_workflow/: baserule.py  exceptions.py  main.py  vote_menu_generator.py
maps_workflow/rules/: file.py  file_size.py  image.py  is_image_valid.py  is_info_valid.py  is_setting_valid.py  is_sound_valid.py  meta.py  setting.py  sound.py  tile.py  tile_exist.py
maps_workflow/votes/: HeadESY.cfg  HeadEXT.cfg  HeadHRD.cfg  HeadINS.cfg  HeadMN.cfg  HeadMOD.cfg  HeadSOL.cfg
tests/maps/: tiny_finishable_map.map
