[tool.poetry]
name = "maps_workflow"
version = "0.1.0"
description = ""
authors = ["Avolicious <avolicious@kog.tw>"]
readme = "README.md"

[tool.poetry.scripts]
maps-workflow = "maps_workflow.main:main"

[tool.poetry.dependencies]
python = "^3.11"
twmap = "^0.6.1"
numpy = "^2.1.1"
ruamel-yaml = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
