[project]
name = "maps-workflow"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pydantic>=2.10.1",
    "ruamel.yaml>=0.18.6",
    "twmap>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
